# MathSo

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  tags
math_so/: __init__.py  animate_bisection.py
math_so/apps/pywebio/: __init__ .py  __init__.py  bmi.py  bokeh_app.py  generate_report.py  output_funcs.py
math_so/model/: __init__.py  lotka_volterra.py
math_so/utils/: __init__.py  approx_error.py  floating_point.py  gauss_algorithm.py  nonlinear_systems.py
notebooks/: Boolean Arrays.ipynb  CellularAutomata.ipynb  DataInputVisualization.ipynb  Fractale Dimension.ipynb  GameOfLife.ipynb  Gleam.ipynb  Interpolation.ipynb  LogisticMap.ipynb  LoopsInputOutput.ipynb  Nagel-Schreckenberg-Model.ipynb  Norms.ipynb  NumericalDifferentiation.ipynb  NumericalIntegration.ipynb  Numerik.ipynb  Numerik01.ipynb  Numerik03.ipynb  OOP.ipynb  Optimisation.ipynb  PyWebIO.ipynb  PythonBasics.ipynb  QueueingTheory.ipynb  SolutionHW07.ipynb  SolutionHW1.ipynb  SolutionHW10.ipynb  SolutionHW11.ipynb  SolutionHW12.ipynb  SolutionHW13.ipynb  SolutionHW2.ipynb  SolutionHW3.ipynb  SolutionHW4.ipynb  SolutionHW5.ipynb  SolutionHW6.ipynb  SolutionHW9.ipynb  SymbolicMathematics.ipynb  Systems of linear equations.ipynb  TaylorSeries.ipynb  Visualization.ipynb  Visualization3d.ipynb  example.ipynb  loesungen05.ipynb  (+16 more)
notebooks/scripts/: functions.py  interest.py  xlsplot_example.xlsx
scripts/: animate_bisection.py  bmi.py  bokeh_app.py  output_funcs.py  say-hello-world.py
tests/: test_math_so.py  test_utils.py
