[tool.poetry]
name = "math_so"
version = "0.1.0"
description = "Lecture on numeric."
authors = ["Olaf Bochmann <Olaf.Bochmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"
scikit-learn = "^0.23.2"

pytest = {version = "^5.4.3", optional = true}
pytest-cov = {version = "^2.0.0", optional = true}
autopep8 = {version = "^1.5.3", optional = true}
flake8 = {version = "^3.8.3", optional = true}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[tool.poetry.extras]
tests = ["pytest", "pytest-cov","flake8", "autopep8"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
