[tool.poetry]
name = "math_so"
version = "0.1.0"
description = "Lecture on numeric."
authors = ["Olaf Bochmann <Olaf.Bochmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
pandas = "^1.0"

pytest = {version = "^5.4.3", optional = true}
pytest-cov = {version = "^2.0.0", optional = true}
autopep8 = {version = "^1.5.3", optional = true}
flake8 = {version = "^3.8.3", optional = true}
hypothesis = "^5.41.4"
numpy = "^1.19.4"
scipy = "^1.5.4"
ipython = "^7.19.0"
sympy = "^1.7"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[tool.poetry.extras]
tests = ["pytest", "pytest-cov","flake8", "autopep8"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
