[tool.poetry]
name = "math_so"
version = "0.1.0"
description = "Lecture on numeric."
authors = ["Olaf Bochmann <Olaf.Bochmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
pandas = "^1.2.0"
hypothesis = "^5.49.0"
numpy = "^1.19.5"
scipy = "^1.6.0"
ipython = "^7.19.0"
sympy = "^1.7.1"
matplotlib = "^3.3.3"
statsmodels = "^0.12.1"
pytest = {version = "^5.4.3", optional = true}
pytest-cov = {version = "^2.10.1", optional = true}
autopep8 = {version = "^1.5.4", optional = true}
flake8 = {version = "^3.8.4", optional = true}
cellpylib = "^0.1.1"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
qtconsole = "^5.1.1"
PyQt5 = "^5.15.6"
openpyxl = "^3.0.9"
Fplot = "^0.2.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[tool.poetry.extras]
tests = ["pytest", "pytest-cov","flake8", "autopep8"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
